@@ -2,6 +2,7 @@ trunk
 =====
 * missing <errno.h> include 
 * fix memory leak in RAM objective function
+* incorporated NaN unsafe matrix multiplication from R <= 2.11.1
 
 Release 1.0.1-1464 (October 8, 2010)
 ====================================
